# toy-tx-proc

./: Cargo.toml  README.md
src/: engine.rs  io.rs  lib.rs  main.rs  model.rs
tests/: cli.rs  golden.rs
tests/cases/: 02-withdrawal-insufficient-funds.input.csv  03-dispute-holds-funds.input.csv  04-resolve-releases-funds.input.csv  05-chargeback-freezes-account.input.csv  06-dispute-nonexistent-tx-ignored.input.csv  07-resolve-without-dispute-ignored.input.csv  08-chargeback-without-dispute-ignored.input.csv  09-cross-client-dispute-mismatch-ignored.input.csv  10-dispute-withdrawal-ignored.expected.csv  10-dispute-withdrawal-ignored.input.csv  11-redispute-after-resolve.input.csv  12-no-dispute-after-chargeback.input.csv  13-locked-account-rejects-new-tx.input.csv  14-negative-available-during-dispute.expected.csv  14-negative-available-during-dispute.input.csv  15-duplicate-tx-id-ignored.input.csv  16-whitespace-and-precision.expected.csv  16-whitespace-and-precision.input.csv  17-unknown-type-skipped.expected.csv  17-unknown-type-skipped.input.csv  18-deposit-missing-amount-skipped.expected.csv  18-deposit-missing-amount-skipped.input.csv  19-fraud-chargeback-negative-balance.expected.csv  19-fraud-chargeback-negative-balance.input.csv  20-multi-client-unordered-ids.expected.csv  20-multi-client-unordered-ids.input.csv  21-double-dispute-ignored.expected.csv  21-double-dispute-ignored.input.csv  22-unknown-resolve-chargeback-ignored.input.csv  23-cross-client-resolve-chargeback-mismatch-ignored.input.csv  24-locked-account-resolves-existing-dispute.input.csv  (+15 more)
