[package]
name = "tx-processor"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = { version = "1.4.0", default-features = false }
env_logger = { version = "0.11.11", default-features = false }
log = { version = "0.4.33", default-features = false }
rust_decimal = { version = "1.42.1", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
thiserror = { version = "2.0.18", default-features = false }

[dev-dependencies]
rust_decimal_macros = { version = "1.40.0", default-features = false }
